--- a/在线分布式数据库原理与实践/1_事务与分布式事务原理与实践.md
+++ b/在线分布式数据库原理与实践/1_事务与分布式事务原理与实践.md
@@ -356,17 +356,52 @@ Happen Before,事务的先后关系通过自增id号来保证.
 * 死锁扩展 - U锁
 * MVCC拾遗
 
-**死锁扩展 - U锁**
+#####死锁扩展 - U锁
 
-可重复隔离级别下:
+**读写锁死锁**
+
+读写锁死锁:
+
+事物(Trx)1:
+
+1. READ From A, 读锁放入数据A的临界区
+2. A - 100, 事物1的读锁升级成写锁,写被挡在外面(不能进入临界区),因为读还没有完成(等待2个读锁释放)
+3. 事物1的写锁需要等待事物2的读锁释放才能进入临界区,事物2的读锁需要在事物2的写锁进行操作以后才能释放
+
+		Trx1
+		Begin Trx1;
+		Read from A(读锁A);
+		A - 100(读锁A升级为写锁);
+		Commit(unlock A);
+
+事物(Trx)2: 
+
+1. READ From A
+2. A - 100, 事物2的读锁升级成写锁,写被挡在外面(不能进入临界区),因为读还没有完成(等待2个读锁释放)
+3. 事物2的写锁需要等待事物2的读锁释放才能进入临界区,事物1的读锁需要在事物1的写锁进行操作以后才能释放
+
+		Trx1
+		Begin Trx1;
+		Read from A(读锁A);
+		A - 100(读锁A升级为写锁);
+		Commit(unlock A);
+
+临界区:
+
+1. 事物1读锁,下一个读可以进来,下一个写需要等在外面
+2. 事物2读锁
+
+可重复隔离级别下(Trx:事物):
 
 * Trx1 申请A读锁 - 成功
 * Trx2 申请A读锁 - 成功
 * Trx1: 申请A读锁升级为写锁 - 等待Trx2读锁释放
 * Trx2: 申请A读锁升级为写锁 - 等待Trx1读锁释放
 
+在`什么场景`可以出现这种死锁:
 	
-		UPDATE SET A = A-1 WHERE id = 100
+		UPDATE SET A = A-1 WHERE id = 100;
+		该查询并发运行多次就会出现
 		
 		对应2个原子操作:
 		
@@ -375,21 +410,70 @@ Happen Before,事务的先后关系通过自增id号来保证.
 		
 单纯的`读写锁`在这个语句的高并发场景下会造成死锁(因为有读锁,和写锁).所有有了`U锁`(Update 锁)解决这个问题.
 
-`U锁(Update 锁,更新所)`: 先去判断这个事务有没有针对某一个数据的写,如果有针对某一个数据写的情况,会提前在申请锁的时候,把`原来的读锁升级为写锁`.
+**数据库为什么没有出现这种死锁**
+
+`U`锁来解决此问题.
+
+`U`锁的概念.
+	
+		UPDATE SET A = A-1 WHERE id = 100;
+		
+先查出来该数据,然后在事物内立刻做了一个写的操作,查出数据这一下,将查出来这一次的读锁直接申请为写锁.原来是2个锁,先读锁在写锁.现在计算机判断后,直接把`读锁升级为写锁`.	
+
+`为什么不开始就加上写锁?`: 
+
+为了数据库一点点的并发,提升性能.如果一个事物内有针对这个数据的写,才会变成写锁.如果没有这个则仍会是读锁.
+
+
+
+`U锁(Update 锁,更新所)`: 提前去判断这个事务有没有针对某一个数据的写,如果有针对某一个数据写的情况,会提前在申请锁的时候,把`原来的读锁升级为写锁`.
 
 		查询 id = 100 的数据 (读锁直接申请为写锁)
 		
 把读锁升级为写锁,`规避死锁`的情况.
-		
+			
+####MVCC拾遗
+
+**快照隔离级别(SNAPSHOT ISOLATION)**
+
+* 针对读多写少场景优化
+* 并行度能达到或超过读未提交,而隔离界别很高	
+
+快照隔离界别映射为`读以提交`,`重复读`.	
+
+#####写和写可以并行吗?
+
 **乐观锁并发方案**
 
 `让版本低的并发更新回滚`
 
 * 优势: 并发低时性能好
 * 代价: 并发高时失败率高		
+
+事物1 和 事物2 同时更新,因为事物1的版本号低,所以事物1回滚,让事物2先进行更新.
+
+####解决冲突方案: 悲观方案(锁)和乐观方案(锁)		
+核心: 同一时间只能一个写.
+		
+**悲观方案**
+
+我开始任务冲突特别严重,一开始就把锁加上.
+
+**乐观方案**
+
+我开始任务冲突不严重,不加锁,真的冲突情况下则回滚.		
 		
 ###整理知识点
 
 ---
+
+**UPDATE**
+
+`UPDATE`对于计算机是2个原子操作的一条事务性操作:
+
+		UPDATE SET A = A-1 WHERE id = 100;
+		
+1. 查询id=100的数据是什么 (一个原子操作,读锁)
+2. 更新A (写锁)
 
 **快照隔离性**
