--- a/餐巾纸的背面/餐巾纸的背面.md
+++ b/餐巾纸的背面/餐巾纸的背面.md
@@ -37,3 +37,52 @@
 **`D`elta**
 
 变化
+
+###通过画图来解决问题
+
+* 什么问题 
+* 什么图
+* `我们`是谁?
+
+####关注的问题
+
+* 如何让一个团队的人理解一个系统运作方式以及他们在系统中的位置
+* 如何帮助决策者明确其想法并改进他们的表达方式
+* 如何帮助他们理解一个市场及一个产品的变化对想法可能产生的影响
+
+###视觉化思考六要素
+
+####谁/什么
+
+* 我身边正在发生什么?我如何参与其中?
+* 由谁负责,还有谁与之有关?责任在谁
+
+#####有多少
+
+* 数量
+* 计算
+
+####在什么时候
+
+* 计划
+* 安排
+
+####在哪里
+
+* 方向
+* 事情如何批次配合挑战
+
+####怎么样
+
+* 事情怎样互相影响
+
+####为什么
+
+* 展望全景
+
+
+
+
+
+
+
