--- a/linux-马哥视频/19_03_bind97服务安装配置.md
+++ b/linux-马哥视频/19_03_bind97服务安装配置.md
@@ -381,7 +381,248 @@ DNS:
 		//下次开机不自动启动 named
 		chkconfig named off
 
+11. 当前主机作为互联网服务器,正向区域解析
+		
+		假设我么实现解析 chloroplast.com xxxx
+		找不见该域名
+		[root@rancher-server named]# ping www.chloroplast.com
+		ping: unknown host www.chloroplast.com
 
+		正向解析
+		编辑 /etc/named.conf,添加如下信息
+		
+		zone "chloroplast.com" IN {
+			type master;
+			file "chloroplast.com.zone";
+		};
+		
+		编写 /var/named/chloroplast.com.zone
+		
+		//设定全局TTL时间
+		TTL 600
+		//这里用@表示引用 zone 中的 chloroplast.com
+		//或者可以写 chloroplast.com.
+		$TTL 600
+		@    IN      SOA     ns1.chloroplast.com.        admin.chloroplast.com. (
+		                        2013040101
+		                        1H
+		                        5M
+		                        2D
+		                        6H)
+		        IN      NS      ns1
+		        IN      MX  10  mail
+		ns1     IN      A       10.44.88.189
+		mail    IN      A       10.170.148.109
+		www     IN      A       10.44.88.189
+		www     IN      A       10.116.138.44
+		ftp     IN      CNAME   www
+		
+		
+		现在可以从我们的自己dns服务器解析到这个域名.
+		
+		[root@rancher-server named]# ping www.chloroplast.com
+		PING www.chloroplast.com (10.116.138.44) 56(84) bytes of data.
+		64 bytes from 10.116.138.44: icmp_seq=1 ttl=57 time=1.44 ms
+		64 bytes from 10.116.138.44: icmp_seq=2 ttl=57 time=1.37 ms
+		64 bytes from 10.116.138.44: icmp_seq=3 ttl=57 time=1.40 ms
+		^C
+		--- www.chloroplast.com ping statistics ---
+		3 packets transmitted, 3 received, 0% packet loss, time 2002ms
+		rtt min/avg/max/mdev = 1.378/1.411/1.449/0.042 ms
+		[root@rancher-server named]# ping www.chloroplast.com
+		PING www.chloroplast.com (10.44.88.189) 56(84) bytes of data.
+		^C
+		--- www.chloroplast.com ping statistics ---
+		3 packets transmitted, 0 received, 100% packet loss, time 2000ms
+		
+		//使用dig 查询 A 记录
+		[root@rancher-server named]# dig -t A www.chloroplast.com
+
+		; <<>> DiG 9.9.4-RedHat-9.9.4-29.el7_2.4 <<>> -t A www.chloroplast.com
+		;; global options: +cmd
+		;; Got answer:
+		;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 58364
+		;; flags: qr aa rd ra; QUERY: 1, ANSWER: 2, AUTHORITY: 1, ADDITIONAL: 2
+		
+		;; OPT PSEUDOSECTION:
+		; EDNS: version: 0, flags:; udp: 4096
+		;; QUESTION SECTION:
+		;www.chloroplast.com.		IN	A
+		
+		;; ANSWER SECTION:
+		www.chloroplast.com.	600	IN	A	10.44.88.189
+		www.chloroplast.com.	600	IN	A	10.116.138.44
+		
+		;; AUTHORITY SECTION:
+		chloroplast.com.	600	IN	NS	ns1.chloroplast.com.
+		
+		;; ADDITIONAL SECTION:
+		ns1.chloroplast.com.	600	IN	A	10.44.88.189
+		
+		;; Query time: 1 msec
+		;; SERVER: 10.44.88.189#53(10.44.88.189)
+		;; WHEN: 二 11月 22 17:31:14 CST 2016
+		;; MSG SIZE  rcvd: 114
+		
+		
+		使用dig查询 CNAME 记录
+		[root@rancher-server named]# dig -t CNAME ftp.chloroplast.com
+
+		; <<>> DiG 9.9.4-RedHat-9.9.4-29.el7_2.4 <<>> -t CNAME ftp.chloroplast.com
+		;; global options: +cmd
+		;; Got answer:
+		;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 1081
+		;; flags: qr aa rd ra; QUERY: 1, ANSWER: 1, AUTHORITY: 1, ADDITIONAL: 2
+		
+		;; OPT PSEUDOSECTION:
+		; EDNS: version: 0, flags:; udp: 4096
+		;; QUESTION SECTION:
+		;ftp.chloroplast.com.		IN	CNAME
+		
+		;; ANSWER SECTION:
+		ftp.chloroplast.com.	600	IN	CNAME	www.chloroplast.com.
+		
+		;; AUTHORITY SECTION:
+		chloroplast.com.	600	IN	NS	ns1.chloroplast.com.
+		
+		;; ADDITIONAL SECTION:
+		ns1.chloroplast.com.	600	IN	A	10.44.88.189
+		
+		;; Query time: 1 msec
+		;; SERVER: 10.44.88.189#53(10.44.88.189)
+		;; WHEN: 二 11月 22 17:32:25 CST 2016
+		;; MSG SIZE  rcvd: 100
+	
+		使用dig查询ns
+		[root@rancher-server ansible]# dig -t NS chloroplast.com
+
+		; <<>> DiG 9.9.4-RedHat-9.9.4-29.el7_2.4 <<>> -t NS chloroplast.com
+		;; global options: +cmd
+		;; Got answer:
+		;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 44691
+		;; flags: qr aa rd ra; QUERY: 1, ANSWER: 1, AUTHORITY: 0, ADDITIONAL: 2
+		
+		;; OPT PSEUDOSECTION:
+		; EDNS: version: 0, flags:; udp: 4096
+		;; QUESTION SECTION:
+		;chloroplast.com.		IN	NS
+		
+		;; ANSWER SECTION:
+		chloroplast.com.	600	IN	NS	ns1.chloroplast.com.
+		
+		;; ADDITIONAL SECTION:
+		ns1.chloroplast.com.	600	IN	A	10.44.88.189
+		
+		;; Query time: 58 msec
+		;; SERVER: 10.44.88.189#53(10.44.88.189)
+		;; WHEN: 三 11月 23 10:46:48 CST 2016
+		;; MSG SIZE  rcvd: 78
+
+12. 反向区域解析(注意域名后面有一个`.`,我第一次编辑这个少些了一个点则报错)
+
+		编辑/etc/named.conf,添加
+		zone "88.44.10.in-addr.arpa" IN {
+			type master;
+			file "10.44.88.zone";
+		};
+		
+		创建 /var/named/10.44.88.zone		
+		$TTL 600
+		@	IN	SOA	ns1.chloroplast.com.	admin.chlorplast.com. (
+					2013040101
+					1H
+					5M
+					2D
+					6H)
+				IN	NS	ns1.chloroplast.com.
+		189	IN	PTR	ns1.chloroplast.com.
+		1	IN	PTR	mail.chloroplast.com.
+		2	IN	PTR	www.chloroplast.com.
+		3	IN	PTR 	www.chloroplast.com.
+
+		重启named服务
+		
+		验证反向解析正确
+		
+		[root@rancher-server named]# dig -x 10.44.88.1
+		; <<>> DiG 9.9.4-RedHat-9.9.4-29.el7_2.4 <<>> -x 10.44.88.1
+		;; global options: +cmd
+		;; Got answer:
+		;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 23000
+		;; flags: qr aa rd ra; QUERY: 1, ANSWER: 1, AUTHORITY: 1, ADDITIONAL: 2
+		
+		;; OPT PSEUDOSECTION:
+		; EDNS: version: 0, flags:; udp: 4096
+		;; QUESTION SECTION:
+		;1.88.44.10.in-addr.arpa.	IN	PTR
+		
+		;; ANSWER SECTION:
+		1.88.44.10.in-addr.arpa. 600	IN	PTR	mail.chloroplast.com.
+		
+		;; AUTHORITY SECTION:
+		88.44.10.in-addr.arpa.	600	IN	NS	ns1.chloroplast.com.
+		
+		;; ADDITIONAL SECTION:
+		ns1.chloroplast.com.	600	IN	A	10.44.88.189
+		
+		;; Query time: 1 msec
+		;; SERVER: 10.44.88.189#53(10.44.88.189)
+		;; WHEN: 三 11月 23 12:02:59 CST 2016
+		;; MSG SIZE  rcvd: 120
+		
+		[root@rancher-server named]# dig -x 10.44.88.2
+		
+		; <<>> DiG 9.9.4-RedHat-9.9.4-29.el7_2.4 <<>> -x 10.44.88.2
+		;; global options: +cmd
+		;; Got answer:
+		;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 24428
+		;; flags: qr aa rd ra; QUERY: 1, ANSWER: 1, AUTHORITY: 1, ADDITIONAL: 2
+		
+		;; OPT PSEUDOSECTION:
+		; EDNS: version: 0, flags:; udp: 4096
+		;; QUESTION SECTION:
+		;2.88.44.10.in-addr.arpa.	IN	PTR
+		
+		;; ANSWER SECTION:
+		2.88.44.10.in-addr.arpa. 600	IN	PTR	www.chloroplast.com.
+		
+		;; AUTHORITY SECTION:
+		88.44.10.in-addr.arpa.	600	IN	NS	ns1.chloroplast.com.
+		
+		;; ADDITIONAL SECTION:
+		ns1.chloroplast.com.	600	IN	A	10.44.88.189
+		
+		;; Query time: 1 msec
+		;; SERVER: 10.44.88.189#53(10.44.88.189)
+		;; WHEN: 三 11月 23 12:03:24 CST 2016
+		;; MSG SIZE  rcvd: 119
+
+		[root@rancher-server named]# dig -x 10.44.88.3
+		
+		; <<>> DiG 9.9.4-RedHat-9.9.4-29.el7_2.4 <<>> -x 10.44.88.3
+		;; global options: +cmd
+		;; Got answer:
+		;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 53889
+		;; flags: qr aa rd ra; QUERY: 1, ANSWER: 1, AUTHORITY: 1, ADDITIONAL: 2
+		
+		;; OPT PSEUDOSECTION:
+		; EDNS: version: 0, flags:; udp: 4096
+		;; QUESTION SECTION:
+		;3.88.44.10.in-addr.arpa.	IN	PTR
+		
+		;; ANSWER SECTION:
+		3.88.44.10.in-addr.arpa. 600	IN	PTR	www.chloroplast.com.
+		
+		;; AUTHORITY SECTION:
+		88.44.10.in-addr.arpa.	600	IN	NS	ns1.chloroplast.com.
+		
+		;; ADDITIONAL SECTION:
+		ns1.chloroplast.com.	600	IN	A	10.44.88.189
+		
+		;; Query time: 1 msec
+		;; SERVER: 10.44.88.189#53(10.44.88.189)
+		;; WHEN: 三 11月 23 12:03:43 CST 2016
+		;; MSG SIZE  rcvd: 119
 
 **named-checkconf**
 
@@ -391,12 +632,120 @@ DNS:
 
 用于生成`/etc/rndc.conf`配置文件.
 
+**dig命令**
+
+		dig -t RT NAME
+		查 NAME 对应的记录(RT)
+		
+		dig -x IP 
+		根据 ip 查找 FQDN
+		
+**host命令**
+
+		host -t RT NAME
+		查询名称的解析结果
+		
+		[root@rancher-server ansible]# host -t A www.chloroplast.com
+		www.chloroplast.com has address 10.116.138.44
+		www.chloroplast.com has address 10.44.88.189
+		
+		[root@rancher-server ansible]# host -t SOA chloroplast.com
+		chloroplast.com has SOA record ns1.chloroplast.com. admin.chlorplast.com. 2013040101 3600 300 172800 21600
+
+**nslookup**
+
+交互式
+
+server IP 设定DNS服务器  
+set q=RT 设定资源类型
+NAME 查询
+
+		[root@rancher-server ansible]# nslookup
+		> server 10.44.88.189
+		Default server: 10.44.88.189
+		Address: 10.44.88.189#53
+		> ser q=A
+		Server:		10.44.88.189
+		Address:	10.44.88.189#53
+		
+		** server can't find ser: NXDOMAIN
+		> set Q=A
+		> www.chloroplast.com
+		Server:		10.44.88.189
+		Address:	10.44.88.189#53
+		
+		Name:	www.chloroplast.com
+		Address: 10.116.138.44
+		Name:	www.chloroplast.com
+		Address: 10.44.88.189
+		> set q=NS
+		> chloroplast.com
+		Server:		10.44.88.189
+		Address:	10.44.88.189#53
+		
+		chloroplast.com	nameserver = ns1.chloroplast.com.
+
 ###整理知识点
 
 ---
 
 ####/etc/resolv.conf
 
+是DNS客户机配置文件,用于设置DNS服务器的IP地址及DNS域名,还包含了主机的域名搜索顺序.该文件是由域名解析器(resolver,一个根据主机名解析IP地址的库)使用的配置文件.
+
+resolv.conf的关键字主要有四个:
+
+* `nameserver`: 定义`DNS`服务器的IP地址
+* `domain`: 定义本地域名
+* `search`: 定于域名搜索列表
+* `sortlist`: 返回的域名进行排序
+
+**nameserver**
+
+表示解析域名时使用该地址指定的主机为域名服务器.其中域名服务器是按照文件中出现的书讯来查询的,且只有当第一个nameserver没有反应时才查询下面的nameserver.
+
+**domain**
+
+声明主机的域名.很多程序用到它,如邮件系统;当为没有域名的主机进行dns查询时,也要用到,如果没有域名,主机名将被使用,删除所有在第一个点( .)前面的内容.
+
+**search**
+
+它的多个参数指明域名查询顺序.当要查询没有域名的主机,主机将在由search声明的域中分别查找.
+
+domain和search不能共存;如果同时存在,后面出现的将会被使用.
+
+**sortlist**
+
+允许将得到域名结果进行特定的排序.它的参数为网络/掩码对,允许任意的排列顺序.
+
+**search 和 domain 的作用**
+
+我们直接`ssh test`,这个`test`是我随便其的名字.
+
+		ssh test -v
+		OpenSSH_6.9p1, LibreSSL 2.1.7
+		debug1: Reading configuration data /Users/chloroplast1983/.ssh/config
+		debug1: Reading configuration data /etc/ssh/ssh_config
+		debug1: /etc/ssh/ssh_config line 20: Applying options for *
+		debug1: /etc/ssh/ssh_config line 102: Applying options for *
+		ssh: Could not resolve hostname test: nodename nor servname provided, or not known
+		
+我们修改`/etc/resolved.conf`,添加如下:
+		
+		...
+		search test.com
+		
+我们再次`ssh test`,则可以找到`test.test.com`
+
+		[root@rancher-server ansible]# ssh test -v
+		OpenSSH_6.6.1, OpenSSL 1.0.1e-fips 11 Feb 2013
+		debug1: Reading configuration data /etc/ssh/ssh_config
+		debug1: /etc/ssh/ssh_config line 56: Applying options for *
+		debug1: Connecting to test [69.172.200.109] port 22.
+		
+		[root@rancher-server ansible]# ping test.test.com
+		PING test.test.com (69.172.200.109) 56(84) bytes of data.
+		
 ####临时性的关闭SELinux:
 
 **查看当前状态**
