--- a/餐巾纸的背面/餐巾纸的背面.md
+++ b/餐巾纸的背面/餐巾纸的背面.md
@@ -81,6 +81,38 @@
 * 展望全景
 
 
+###视觉化思考导向绳
+
+####4个步骤
+
+* 看
+* 观察
+* 想象
+* 展示
+
+####3种工具
+
+* 肉眼
+* 内心的眼睛
+* 手眼合作
+
+####六种看的方式
+
+* 谁\什么
+* 有多少
+* 在哪里
+* 在什么时候
+* 怎么样
+* 为什么
+
+###现场旧货出清原则
+
+当我们能够一眼看到所有东西时,它们看起来就不太一样了.
+
+可以这样理解, 当我们看见我们的储物柜(里面叠放了很多东西),我们感觉很杂乱.但是当我们全部理清出来后,看到的就不一样了(清晰,分门别类存放).
+
+
+
 
 
 
