--- a/linux-马哥视频/20_02_dns子域授权.md
+++ b/linux-马哥视频/20_02_dns子域授权.md
@@ -6,6 +6,25 @@
 
 ---
 
+####正向区域获取授权
+		
+		//先在当前一个域下划一个子片
+		SUB_ZONE_NAME	IN 	NS	NSSERVER_SUB_ZONE_NAME
+		//任何一个NS条目都应该有一条A记录
+		NSSERVER_SUB_ZONE_NAME	IN	A	IP
+		
+**示例**
+
+.com 服务器,注册 mageedu.com.子域中有几个名称服务器(从,等等),需要在父域中建立几条.
+
+当有多个条目时(从几个当中轮替).
+
+		mageedu.com.	IN	NS 	ns1.mageedu.com.
+						IN	NS 	ns2.mageedu.com.
+		ns1.mageedu.com.	IN	A	xxx.xxx.xx			ns2.mageedu.com.	IN	A	xxx.xxx.xx(从)
+
+
+
 ###整理知识点
 
 ---
