--- a/linux-马哥视频/20_02_dns子域授权.md
+++ b/linux-马哥视频/20_02_dns子域授权.md
@@ -13,9 +13,14 @@
 		//任何一个NS条目都应该有一条A记录
 		NSSERVER_SUB_ZONE_NAME	IN	A	IP
 		
-**示例**
+		
+子域中有几个名称服务器(从,等等),需要在父域中建立几条.
 
-.com 服务器,注册 mageedu.com.子域中有几个名称服务器(从,等等),需要在父域中建立几条.
+主域和子域可以是不同的ip段, 但是需要可以通信. 
+
+**示例1**
+
+.com 服务器,注册 mageedu.com.
 
 当有多个条目时(从几个当中轮替).
 
@@ -23,7 +28,79 @@
 						IN	NS 	ns2.mageedu.com.
 		ns1.mageedu.com.	IN	A	xxx.xxx.xx			ns2.mageedu.com.	IN	A	xxx.xxx.xx(从)
 
+**示例2**
 
+`mageedu.com.` 2个不同的子域
+
+	fin.mageedu.com.	IN	NS	ns1.find.magedu.com.
+	fin.mageedu.com.	IN	NS  ns2.find.magedu.com.
+	ns1.fin.mageedu.com.	IN	A	xxx.xxx.xxx.xxx
+	ns2.find.magedu.com.	IN	A	xxx.xxx.xxx.xxx(从)
+	
+	market.mageedu.com. IN	NS ns1.market.mageedu.com.
+	ns1.market.mageedu.com.	IN	A	xxx.xxx.xxx.xxx
+
+**创建fin子域**
+
+1. 编辑父域的主名称服务器,并且序列号加1,(2013040101 -> 2013040102),否则从服务器得不到这个数据.
+
+		vi /var/named/chloroplast.com.zone
+		
+		$TTL 600
+		@       IN      SOA     ns1.chloroplast.com.    admin.chlorplast.com. (
+		                        2013040102
+		                        1H
+		                        5M
+		                        2D
+		                        6H)
+		        IN      NS      ns1
+		        IN      MX  10  mail
+		ns1     IN      A       10.44.88.189
+		mail    IN      A       10.170.148.109
+		www     IN      A       10.44.88.189
+		www     IN      A       10.116.138.44
+		ftp     IN      CNAME   www
+		
+		fin     IN      NS      ns1.fin
+		ns1.fin IN      A		 xxx.xxx.xxx.xxx
+		
+		market	IN		NS		 ns1.market
+		ns1.market	IN	A		 xxx.xxx.xxx.xxx
+		
+
+2. 检测`NS`记录是否存在,这里是检测`NS`记录是否存在,但是因为还没建立服务,所以现在还不能工作.需要建立好子域才可以显示.需要联系子域来提供信息.
+
+		dig -t NS fin.chlorpast.com
+
+
+####子域转发给父域
+
+转发的是非子域的都会转发出去.
+
+编辑子域的 `named.conf`
+
+		options {
+			directory	"/var/named";
+			forward	first;
+			//转发器,转发给父域
+			forwarders {xxx.xxx.xx};
+		}
+		
+`forward`:
+
+* only: 解析不了的都转发给指定的那台服务器.
+* first: 解析不了的先转发,如果没有获取到答案择取找根
+
+**如果只是某个域的转发,放在`zone`内**
+	
+		...
+		zone "mageedu.com"	IN	{
+			type forward;
+			forward	first;
+			forwarders {xxx.xxx.xx};
+		}	
+
+意味着只对`mageedu.com`这个域进行转发.
 
 ###整理知识点
 
