--- a/linux-马哥视频/20_03_dns视图及日志系统.md
+++ b/linux-马哥视频/20_03_dns视图及日志系统.md
@@ -6,6 +6,233 @@
 
 ---
 
+####allow
+
+**allow-recursion** 
+
+允许递归的来源
+
+**allow-query**
+
+允许查询的来源
+
+**allow-transfer**
+
+允许实现区域传送的客户端
+
+* axfr
+* ixfr
+
+可以使用`dig -t`来模拟区域传送.
+
+**`named.conf`使用变量来管理域名**
+
+假设我们在`allow-recursion`,`allow-query`,`allow-transfer`中域名列表一样.我们最好使用一个统一的变量来管理域名.便于修改.
+
+`acl`: 访问控制列表.管理域名.在`options`之外定义`acl`,最上层定义.
+
+声明格式:
+
+		acl ACL_NAME {
+			ip1;
+			ip2;
+		};
+
+示例:
+
+		acl innet {
+			172.16.0.0/16;
+			127.0.0.0/8;
+		}
+		
+		allow-query { innet; };
+		
+内置变量:
+
+* none 没有域名
+* any 任意域名  
+
+####智能DNS
+
+根据客户端来源,返回离用户最近的ip.
+
+用两个文件(解析文件)分别用来应对是`联通`还是`电信`的请求.
+
+一个域名的解析结果,一分为二.(split brain).
+
+**view**
+
+视图. 
+
+常用指令:
+
+* `match-clients`: 判定哪些客户端(智能dns使用).
+
+####web对象缓存
+
+部署在各地(dns)的缓存服务器.缓存web结果.
+
+####CDN
+
+`Content Delivery Network`: 内容分发网络.
+
+原始服务器可以把内容推送到用户家门口(缓存静态内容).
+
+网络:
+
+* 判断客户端来源,并`返回离他最近`的一个服务器的地址.
+* 这个网络本身(缓存服务器),能够根据原始服务器获取到内容缓存到本地.
+
+####智能解析示例
+
+一个域名根据不同网络解析不同的地址.
+
+* 172.16.0.0/16, 127.0.0.0/8 电信网络
+* 其他网络是联通
+
+**修改`named.conf`,使用视图**
+
+视图的定义:
+
+		view VIEW_NAME {
+		
+		};
+
+一旦使用了视图,所有区域都必须定义在视图当中.
+
+根区域 `"."` 定义在需要`递归`的视图当中.
+
+		定义三个视图: 内网 电信 联通
+		
+		//下面两个视图使用了完全不同的两个文件,这两个文件解析不同的结果即可.
+		//mageedu.com 智能DNS,根据客户端来源返回不同ip
+		//a.net 不区分,但是因为定了视图以后,所有区域都必须定义在视图当中.所以把 a.net 放到所有视图当中
+		
+		acl telcom {
+			172.16.0.0/16;
+			127.0.0.0/8;
+		};
+		
+		...options
+		
+		view telecome {
+			match-cleints { telcom; };
+			zone "mageedu.com" IN {
+				type master;
+				file "telcome.mageedu.com.zone";
+			}
+			zone "a.net" IN {
+				type master;
+				file "a.net.zone";
+			};
+		};
+		
+		// any 意味着是任何,只要上面的视图匹配到不到,就到下面的
+		view unicom {
+			match-cleints { any; };
+			zone "mageedu.com" IN {
+				type master;
+				file "unicom.mageedu.com.zone";
+			}
+			zone "a.net" IN {
+				type master;
+				file "a.net.zone";
+			};			
+		};
+		
+设置`/var/named/telcome.mageedu.com.zone`和`/var/named/unicom.mageedu.com.zone`两个解析文件.
+		
+`/var/named/telcome.mageedu.com.zone`:
+
+		$TTL 43200
+		@		IN		SOA		ns1.mageedu.com.    admin.mageedu.com. (
+									2013040201
+							        1H
+							        10M
+							        7D
+							        1D )
+				IN		NS 		ns1
+				IN		MX	10	mail
+						
+		ns1		IN		A		172.16.100.1
+		mail	IN		A		172.16.100.2
+		www		IN		A		172.16.100.3
+		
+		修改属主和权限:
+		chgrp	named 	telcome.mageedu.com.zone
+		chmod 	640	telcome.mageedu.com.zone
+				
+`/var/named/unicom.mageedu.com.zone`:	
+
+		$TTL 43200
+		@		IN		SOA		ns1.mageedu.com.    admin.mageedu.com. (
+									2013040201
+							        1H
+							        10M
+							        7D
+							        1D )
+				IN		NS 		ns1
+				IN		MX	10	mail
+						
+		ns1		IN		A		172.16.100.1
+		mail	IN		A		192.168.0.16
+		www		IN		A		192.168.0.17
+		
+		修改属主和权限:
+		chgrp	named 	unicom.mageedu.com.zone
+		chmod 	640		unicom.mageedu.com.zone
+		
+`/var/named/a.net.zone`:	
+
+		$TTL 43200
+		@		IN		SOA		ns1.a.net.    admin.a.net. (
+									2013040201
+							        1H
+							        10M
+							        7D
+							        1D )
+				IN		NS 		ns1
+						
+		ns1		IN		A		172.16.100.1
+		www		IN		A		172.16.100.100
+		
+		修改属主和权限:
+		chgrp	named 	a.net.zone
+		chmod 	640		a.net.zone
+		
+测试:
+
+		重启 named
+		
+		在联通主机ip测试,得到 www 网站记录为 192.168.0.17 联通ip
+		dig -t A www.mageedu.com @172.16.100.1
+		访问得到:
+		ns 记录 ns1.mageedu.com.
+		A 记录  www.mageedu.com. 192.168.0.17
+		A 记录 ns1.magedu.com. 172.16.100.1
+		
+
+		在电信主机ip测试,得到 www 网站记录为 172.16.100.3 联通ip
+		dig -t A www.mageedu.com @172.16.100.1
+		访问得到:
+		ns 记录 ns1.mageedu.com.
+		A 记录  www.mageedu.com. 172.16.100.3
+		A 记录 ns1.magedu.com. 172.16.100.1
+		
+		同样的一个ns服务器,但是解析出不同的结果.
+		
+####一些问题
+
+修改配置文件过于繁琐,类似上面的列子`a.net`每个区域都要写一遍.
+
+DNS 启动后将数据文件载入内存,所以查找解析都是在内存当中完成的.由此,每次修改都要把文件重新分析载入.
+
+**解决方案**
+
+区域的定义,以及字符串,类型都不写到配置文件当中.写到`数据库`当中.每个域要用到的东西都从数据库中查找,所以随时修改随时生效.不用重新读取.管理方便,但是慢了很多.
+
+		
+		
 ###整理知识点
 
 ---
