--- a/linux-马哥视频/20_03_dns视图及日志系统.md
+++ b/linux-马哥视频/20_03_dns视图及日志系统.md
@@ -231,8 +231,61 @@ DNS 启动后将数据文件载入内存,所以查找解析都是在内存当中
 
 区域的定义,以及字符串,类型都不写到配置文件当中.写到`数据库`当中.每个域要用到的东西都从数据库中查找,所以随时修改随时生效.不用重新读取.管理方便,但是慢了很多.
 
+####开启日志
+
+`options`里面添加:
+
+		querylog yes;
 		
+记录在`var/log/messages`里
+
+`DNS`的弹性日志系统,可以定义只记录哪些信息.
+
+* `channel`: 日志应该记录到哪.日志的记录位置.
+	* `syslog`
+	* `file`: 自定义保存日志信息的文件.`file`也有自己的日志级别,不完全同于`syslog`.日志级别如下:
+		* critical
+		* error
+		* warning
+		* notice
+		* info,默认info级别
+		* `debug[level]`(`bind`独有),和`syslog`的`debug`级别不同.
+		* dynamic(`bind`独有)
+* `category`: 类别,定义日志源.可以通过`category`自定义日志来源.只有15个
+	* 查询
+	* 区域传送
+	* ...
 		
+一个`category`可以定向多个`channel`,一个`channel`只可以属于一个`category`.
+
+**日志格式**
+
+		logging {
+			channel my_file {
+				//这个日志文件保存为10k,如果超过10k则至多保存3个版本
+				file "log.msgs" versions 3 size 10k;
+				//日志级别
+				severity dynamic;
+				print-time yes;
+				print-serverity yes ;
+			};
+			
+			channel my_syslog {
+				syslog local0;
+				//info 或者 info以上都会记录
+				serverity info;
+			};
+			
+			category xfer-in {my_file;};
+			category update {my_syslog};
+		};
+
+####queryperf 
+
+对`dns`服务器做压力测试.查看每秒能解析多少.
+
+
+
 ###整理知识点
 
 ---
