--- a/linux-马哥视频/20_04_dhcp服务.md
+++ b/linux-马哥视频/20_04_dhcp服务.md
@@ -6,6 +6,122 @@
 
 ---
 
+####DHCP
+
+`D`ynamic `H`ost `C`onfiguration `P`rotocol. 动态主机配置协议.
+
+前身是 `bootp`.
+
+使用`UDP`协议,服务端`67`号端口.客户端`UDP`的`68`号端口.
+
+可以使用`netstat -unlp`查看端口占用.
+
+#####bootp
+
+每个主机的操作系统都是装载在服务器的硬盘内.在启动前需要和服务器建立通信,双方需要先建立通信.但是IP地址又是配置在操作系统内.所以需要一个独特的网卡,这个网卡在启动时开始向网络发送广播通报.
+
+开机时启动是动态,开机后ip地址和主机的mac地址建立关系.则该ip地址永久属于该主机.
+
+`bootp`,为了引导主机启动.仅仅是第一次动态分配.
+
+`bootp`不能应付当已给主机走了,这个ip地址不能在分配给其他主机的情况.
+
+#####dhcp
+
+`bootp` 增强版.
+
+`dhcp` 有了新的功能 `租约`(`lease`).ip地址有限的使用期限.当主机关机后,ip地址会释放掉,重新放到可用列表当中.
+
+`动态`: 需要就分配,不需要就回收.
+
+`续租`: 当租期到达一半,就要续租了.向服务器发起续租请求.一次只能延迟`一半`的时间.
+
+如果服务器续租不上(链接不上),重试若干次(每次都是在一半时间,比如第一次续租2H,1H开始发起续租申请,如果联系不上,则在0.5H再次发起续租申请,还联系不上0.25H再次发起).若干次后放弃.
+
+如果续租不上,则发起`广播`.如果有多个服务端,客户端选择`第一个响应`的服务器.
+
+#####配置tcp/ip属性
+
+* IP
+* 掩码 NETMASK (用来确定两个IP地址是否同属于一个子网)
+* 网关 (没有的话只能本地通信,不能外网通信)
+* DNS
+* NIS
+
+需找服务器都是`广播`,续租是`单播`.
+
+**客户端寻找服务器端**
+
+client(没有IP地址) --广播(UDP:DHCPDISCOVER)-->服务器端回应报文(DHCPOFFER)
+
+**客户端请求使用服务端**
+
+client-->(广播:DHCPREQUEST)-->服务器端回应(广播:DHCPACK)
+
+**续租**
+
+client-->(单播:DHCPREQUEST)-->服务器端回应(单播:DHCPACK)
+
+**DHCP不能跨物理网络使用**
+
+路由不会转发广播包.
+
+**路由成为DHCP的中继器`Relay`**
+
+通过路由器跨物理网络使用DHCP服务器.
+
+客户端发起广播请求,路由器收到广播请求.路由器单播请求给DHCP服务器,服务器单播给路由器.路由器在广播回客户端.
+
+####保留地址
+
+保留地址不能使用地址池中的地址,必须使用地址外的地址.必须和DHCP在一个网段内.对应关系靠`mac`来识别的.
+
+####配置DHCP服务器
+
+		[root@rancher-server ansible]# yum -y install dhcp
+		[root@rancher-server ansible]# rpm -ql dhcp
+		/etc/NetworkManager
+		/etc/NetworkManager/dispatcher.d
+		/etc/NetworkManager/dispatcher.d/12-dhcpd
+		/etc/dhcp
+		/etc/dhcp/dhcpd.conf
+		/etc/dhcp/dhcpd6.conf
+		/etc/openldap/schema/dhcp.schema
+		/etc/sysconfig/dhcpd
+		/usr/bin/omshell
+		/usr/lib/systemd/system/dhcpd.service
+		/usr/lib/systemd/system/dhcpd6.service
+		/usr/lib/systemd/system/dhcrelay.service
+		/usr/sbin/dhcpd
+		/usr/sbin/dhcrelay (中继)
+		/usr/share/doc/dhcp-4.2.5
+		/usr/share/doc/dhcp-4.2.5/dhcpd.conf.example
+		/usr/share/doc/dhcp-4.2.5/dhcpd6.conf.example
+		/usr/share/doc/dhcp-4.2.5/ldap
+		/usr/share/doc/dhcp-4.2.5/ldap/README.ldap
+		/usr/share/doc/dhcp-4.2.5/ldap/dhcp.schema
+		/usr/share/doc/dhcp-4.2.5/ldap/dhcpd-conf-to-ldap
+		/usr/share/man/man1/omshell.1.gz
+		/usr/share/man/man5/dhcpd.conf.5.gz
+		/usr/share/man/man5/dhcpd.leases.5.gz
+		/usr/share/man/man8/dhcpd.8.gz
+		/usr/share/man/man8/dhcrelay.8.gz
+		/usr/share/systemtap/tapset/dhcpd.stp
+		/var/lib/dhcpd
+		/var/lib/dhcpd/dhcpd.leases (记录哪个地址分配给谁使用)
+		/var/lib/dhcpd/dhcpd6.leases
+		
+**配置文件**
+
+		[root@rancher-server ansible]# cat /etc/dhcp/dhcpd.conf
+		#
+		# DHCP Server Configuration file.
+		#   see /usr/share/doc/dhcp*/dhcpd.conf.example
+		#   see dhcpd.conf(5) man page
+		#
+
+复制样例配置文件`/usr/share/doc/dhcp*/dhcpd.conf.example`到`/etc/dhcp/dhcpd.conf`.
+
 ###整理知识点
 
 ---
