--- a/linux-马哥视频/23_01_php相关概念及配置.md
+++ b/linux-马哥视频/23_01_php相关概念及配置.md
@@ -96,6 +96,32 @@ Common Gateway Interface 通用网关接口
 
 Web 服务器和后端程序语言对接的接口.
 
+####DSO
+
+dynamic shared object, 动态共享对象.
+
+####apache和PHP结合方式
+
+* CGI
+* Module (一个进程同时解释 php 和 静态文件)
+* FastCGI
+
 ###整理知识点
 
 ---
+
+####shell 命令调用(替换)
+
+**使用 backtick 符号**
+
+		for i in `cd /old/code/dir ; echo *.c`
+		do
+		    diff -c /old/code/dir/$i $i | more
+		done
+		
+**使用`$(…)`**
+
+		for i in $(cd /old/code/dir ; echo *.c)
+		do
+		    diff -c /old/code/dir/$i $i
+		done | more
