--- a/UNIX:Linux 环境高级C语言系统开发/1.2_gcc和vim的使用.md
+++ b/UNIX:Linux 环境高级C语言系统开发/1.2_gcc和vim的使用.md
@@ -20,15 +20,15 @@
 	
 		gcc -E xxx.c  -o xxx.i
 	
-2. (`生成.s文件`)编译(翻译成汇编文件)
+2. (`生成.s文件`)编译(**翻译成汇编文件**)
 
 		gcc -S xxx.i
 	
-3. (`生成.o文件`)汇编
+3. 汇编(`生成.o文件`)
 
 		gcc -c xxx.s
 
-4. (`生成可执行文件`)连接
+4. 连接(`生成可执行文件`)
 
 		gcc xxx.o -o xxx
  
