--- a/UNIX:Linux 环境高级C语言系统开发/14_15_16_指针.md
+++ b/UNIX:Linux 环境高级C语言系统开发/14_15_16_指针.md
@@ -136,12 +136,14 @@
 
 * `++`,`--`: 指针移动
 
+对指针变量进行加法和减法运算时,是**根据数据类型的长度来计算的**.如果一个指针变量 p 指向了数组的开头,那么 p+i 就指向数组的第 i 个元素;如果 p 指向了数组的第 n 个元素,那么 p+i 就是指向第 n+i 个元素;而不管 p 指向了数组的第几个元素,p+1 总是指向下一个元素,p-1 也总是指向上一个元素.
+
 **指针与一维数组**
 
 		int a[3] = {1,2,3};
 		
 		a 表示当前数组的起始位置
-		a[i] = &(a +i) 数组起始位置像下移动i个元素(这里是i个int)然后取值
+		a[i] = *(a +i) 数组起始位置像下移动i个元素(这里是i个int)然后取值
 		
 		int *p = a;
 		
