--- a/餐巾纸的背面/餐巾纸的背面.md
+++ b/餐巾纸的背面/餐巾纸的背面.md
@@ -111,9 +111,9 @@
 
 可以这样理解, 当我们看见我们的储物柜(里面叠放了很多东西),我们感觉很杂乱.但是当我们全部理清出来后,看到的就不一样了(清晰,分门别类存放).
 
+###**看**和**观**察
 
-
-
+"看"是一个相对开放的过程,它主要在于收集各种视觉信息;而"观察"则是一个逐渐聚焦的过程,为了弄清楚手机来的视觉信息,它会把需要的视觉片段放在一起好好研究.简单来说,"看"是在手机信息,而"观察"则是在选择信息并最终确定要研究的部分到底在哪里."观察"其实是找到了真正的问题所在.
 
 
 
