--- a/汇编入门/第二章寄存器.md
+++ b/汇编入门/第二章寄存器.md
@@ -81,9 +81,54 @@ AH和AL寄存器是可以独立使用的8位寄存器.
 
 一个字可以存在一个16位寄存器中,这个字的高位字节和低位字节自然就存在这个寄存器的高8位寄存器和低8位寄存器中.
 
-####数制的讨论
+####物理地址
 
+CPU访问内存单元时要给出内存单元的地址.所有的内存单元构成的存储控件是一个`一维的线性空间`.
 
+我们将这个唯一的地址成为物理地址.
+
+####16位结构的CPU
+
+**特征**
+
+* 运算器一次最多可以处理16位数据.
+* (通用)寄存器的最大宽度为16位.
+* 寄存器和运算器之间的通路是16位的.
+
+####8086CPU给出的物理地址的方法
+
+* 8086有20位地址总线,可传送20位地址,寻址能力位1M(2^20).
+* 8086内部位16位结构,它只能传送16位的地址,表现出的寻址能力却只有64k(2^16 = 65536(B)/1024=64KB).
+
+**8086CPU的解决方案**
+
+8086CPU采用一种在内部用两个16位地址合成的方法来形成一个20位的物理地址.
+
+* 段地址 16位
+* 偏移地址 16位
+
+通过`地址加法器`加为20位物理地址
+
+**地址加法器合成物理地址的方法**
+
+		物理地址 = 段地址 X 16 + 偏移地址
+		
+段地址x16 就是数据左移4位(二进制位).因为数据存储是以二进制形式存储.
+
+####数据移位
+
+* 一个数据的二进制形式左移1位,相当于该数据乘以2.
+* 一个数据的二进制形式左移N位,相当于该数据乘以2的N次方.
+
+* 一个数据的十六进制形式左移1位,相当于乘以16.
+* 一个数据的十进制形式左移1位,相当于乘以10.
+* 一个数据的x进制形式左移1位,相当于乘以x.
+
+####段的概念
+
+内存并没有分段,段的划分来自于CPU,由于8086CPU用"段地址*16 + 偏移地址 = 物理地址"的方式给出内存单元的物理地址,使得我们可以用分段的方式来管理内存.
+
+是因为8086CPU
 
 ###整理知识点
 
