--- a/linux-马哥视频/23_04_建立lamp平台.md
+++ b/linux-马哥视频/23_04_建立lamp平台.md
@@ -6,6 +6,33 @@
 
 ---
 
+####为用户设定密码
+
+**SET PASSWORD FOR 'USERNAME'@'HOST'=PASSWORD('password');**
+
+		mysql>SET PASSWORD FOR 'root'@'localhost'=PASSWORD('123456');
+		
+**mysqladmin**
+
+		mysqladmin -uroot -hxxx  -p password 'password'
+		
+在linux里面修改mysql密码,指定老密码修改新密码.
+
+**直接修改表**
+
+		UPDATE user SET Password=PASSWORD('password') WHERE USER='root' AND Host='xxxx';
+
+**刷新授权表**
+
+因为mysql修改权限和修改用户密码都是修改了表的数据,但是mysql是基于内存去认证的,所以在修改了密码和权限以后必须要刷新,让mysql重新加载和用户相关的授权表.
+
+		FLUSH PRIVILEGES;
+
+**示例**
+
+		GRANT ALL PRIVILEGES ON *.* TO 'root'@'172.16.%.%' IDENTIFYIED BY ''
+		
+		授权 root用户所有表所有权限,来自 172.16.x.x 网段内.
 
 ###整理知识点
 
