--- a/餐巾纸的背面/餐巾纸的背面.md
+++ b/餐巾纸的背面/餐巾纸的背面.md
@@ -115,6 +115,10 @@
 
 "看"是一个相对开放的过程,它主要在于收集各种视觉信息;而"观察"则是一个逐渐聚焦的过程,为了弄清楚手机来的视觉信息,它会把需要的视觉片段放在一起好好研究.简单来说,"看"是在手机信息,而"观察"则是在选择信息并最终确定要研究的部分到底在哪里."观察"其实是找到了真正的问题所在.
 
+####怎么样
+
+怎么样 = 谁/什么, 有多少, 在哪里, 在什么时候
+
 
 
 
