--- a/汇编入门/第三章寄存器(内存访问).md
+++ b/汇编入门/第三章寄存器(内存访问).md
@@ -6,6 +6,90 @@
 
 ---
 
+#### 内存中的字存储
+
+在 0 地址处开始存放 20000 (4E20H)
+
+* 20 存低地址 0
+* 4E 存高地址 1
+
+**字单元和单元 字节型和字型**
+
+* 0 地址`单元`存放的`字节型`数据是: 20
+* 0 地址`字单元`存放`字型`数据是多少: 4E20
+
+字型要考虑2个字节,高地址对应高位,低地址对应低位.
+
+**结论**
+
+任何两个地址连续的内存单元,N(低位) 号单元和 N+1(高位) 号单元,可以将它们看成两个内存单元,也可以看成一个地址为N的字单元中的高位字节单元和低位字节单元.
+
+#### DS 和 [address]
+
+CPU 要读取一个内存单元的时候,必须要先给出这个内存单元的地址.
+
+在 8086PC 中,内存地址由段地址和偏移地址组成.
+
+8086CPU中有一个`DS`(`D`ata `S`egmant)寄存器,通常用来存放要访问的`数据的段地址`.
+
+**示例**
+
+		读取 10000H 单元的内容
+		
+		mov bx,1000H //段,所以会乘16 左移1位
+		mv ds,bx
+		mv al,[0]
+		
+		将 10000H(1000:0) 中的数据读到al中
+
+**mov指令**
+
+* 将数据直接送入寄存器 `mov ax,2`
+* 将一个寄存器中的内容送入另一个寄存器 `mov bx,ax`
+* 将一个内存单元中的内容送入一个寄存器
+		
+		将偏移地址位0的内容送入寄存器,根据段地址
+		mov al,[0]
+
+
+**从哪个内存单元送到哪个寄存器中**
+
+		mov 寄存器名,内存单元地址
+		
+8086cpu不支持将数据直接送入段寄存器的操作,ds是一个段寄存器.只能直接送入通用寄存器.
+
+		数据 -> 通用寄存器 -> 段寄存器
+
+将数据从寄存器送入内存单元:
+		
+		
+		mov bx,1000H
+		mov ds,bx
+		mov [0],al			
+			
+#### 字的传送
+
+8086CPU是16位结构,有16根数据线,所以,可以一次性传送16位的数据,也就是一次性传送一个字.
+
+		mov bx,1000H
+		mov ds,bx
+		mov ax,[0]  //将1000:0处的字型数据送入ax
+		mov [0],cx  //将cx中的16位数据送到1000:0处
+
+#### mov,add,sub 指令
+
+#### 数据段
+
+#### 栈
+
+#### CPU提欧诺个的栈机制
+
+#### 栈顶超界的问题
+
+#### push,pop指令
+
+#### 栈段
+
 ###整理知识点
 
 ---
