--- a/餐巾纸的背面/餐巾纸的背面.md
+++ b/餐巾纸的背面/餐巾纸的背面.md
@@ -1,8 +1,8 @@
-#餐巾纸的背面
+# 餐巾纸的背面
 
 ---
 
-###功能,品牌和内容
+### 功能,品牌和内容
 
 **功能**
 
@@ -16,7 +16,7 @@
 
 人们会`记得`什么(我们想让它们记住什么)决定`'品牌'`.
 
-###SQVID
+### SQVID
 
 **`S`imple**
 
@@ -38,65 +38,65 @@
 
 变化
 
-###通过画图来解决问题
+### 通过画图来解决问题
 
 * 什么问题 
 * 什么图
 * `我们`是谁?
 
-####关注的问题
+#### 关注的问题
 
 * 如何让一个团队的人理解一个系统运作方式以及他们在系统中的位置
 * 如何帮助决策者明确其想法并改进他们的表达方式
 * 如何帮助他们理解一个市场及一个产品的变化对想法可能产生的影响
 
-###视觉化思考六要素
+### 视觉化思考六要素
 
-####谁/什么
+#### 谁/什么
 
 * 我身边正在发生什么?我如何参与其中?
 * 由谁负责,还有谁与之有关?责任在谁
 
-#####有多少
+##### 有多少
 
 * 数量
 * 计算
 
-####在什么时候
+#### 在什么时候
 
 * 计划
 * 安排
 
-####在哪里
+#### 在哪里
 
 * 方向
 * 事情如何批次配合挑战
 
-####怎么样
+#### 怎么样
 
 * 事情怎样互相影响
 
-####为什么
+#### 为什么
 
 * 展望全景
 
 
-###视觉化思考导向绳
+### 视觉化思考导向绳
 
-####4个步骤
+#### 4个步骤
 
 * 看
 * 观察
 * 想象
 * 展示
 
-####3种工具
+#### 3种工具
 
 * 肉眼
 * 内心的眼睛
 * 手眼合作
 
-####六种看的方式
+#### 六种看的方式
 
 * 谁\什么
 * 有多少
@@ -105,20 +105,32 @@
 * 怎么样
 * 为什么
 
-###现场旧货出清原则
+### 现场旧货出清原则
 
 当我们能够一眼看到所有东西时,它们看起来就不太一样了.
 
 可以这样理解, 当我们看见我们的储物柜(里面叠放了很多东西),我们感觉很杂乱.但是当我们全部理清出来后,看到的就不一样了(清晰,分门别类存放).
 
-###**看**和**观**察
+### **看**和**观**察
 
 "看"是一个相对开放的过程,它主要在于收集各种视觉信息;而"观察"则是一个逐渐聚焦的过程,为了弄清楚手机来的视觉信息,它会把需要的视觉片段放在一起好好研究.简单来说,"看"是在手机信息,而"观察"则是在选择信息并最终确定要研究的部分到底在哪里."观察"其实是找到了真正的问题所在.
 
-####怎么样
+#### 怎么样
 
 怎么样 = 谁/什么, 有多少, 在哪里, 在什么时候
 
+### SQVID 拆解
+
+* `S`: 简单 -> 精细
+* `Q`: 定性 -> 定量
+* `V`: 愿景 -> 执行
+* `I`: 个别 -> 比较
+* `D`: 变化 -> 现状
+
+* 左边的属性是暖性的,或者说与右脑密切先关的.强调简单,定性,形象化等特征.`创造`
+* 右边的属性是冷性的,或者说是与左脑联系在一起的,强调周密,定量,可操作等特征.`理性分析`
+
+### 简单 的反面不是 复杂, 而是 精细
 
 
 
