--- a/餐巾纸的背面/餐巾纸的背面.md
+++ b/餐巾纸的背面/餐巾纸的背面.md
@@ -132,5 +132,24 @@
 
 ### 简单 的反面不是 复杂, 而是 精细
 
+### 选择展示框架(六六法则)
 
+#### 我们"观察"的东西
+
+1. 谁/什么?
+2. 有多少?
+3. 在哪里?
+4. 在什么时候?
+5. 怎么样?
+6. 为什么?
+
+
+#### 我们"展示"的东西
+
+* 画像 -> 谁/什么 -> 定性
+* 图表 -> 有多少 -> 定量
+* 布局图 -> 在哪里 -> 空间中的位置
+* 时间轴 -> 在什么时候 -> 时间中的位置
+* 流程图 -> 怎么样 -> 原因 + 效果
+* 多重变量图 -> 为什么 -> 演绎 + 推测
 
