--- a/linux-马哥视频/25_01_邮件服务系列之基础原理.md
+++ b/linux-马哥视频/25_01_邮件服务系列之基础原理.md
@@ -113,6 +113,45 @@ MUA -> SMTPD 分拣就是中继.
 
 `S`imple `A`uthintication `S`ecure `L`ayer 简单认证安全层.
 
+**MRA**
+
+邮件(检索)取回代理. `M`ail `R`etrieval `A`gent
+
+这个过程是`POP3`协议.
+
+发邮件是`TCP`协议, 收邮件是`POP3`协议.
+
+**WebMail**
+
+![webMail](./img/25_01_1.png "webMail")
+
+**ldap协议**
+
+在用户检索上比mysql还要快一个量级.因为用户登录,把用户信息不能存放在`shadow`文件中(文件太大加载入内存中),放mysql数据库比ldap慢.
+
+把用户账户放在ldap.
+
+`L`ightweight `D`irectory `A`ccess `P`rorocol
+
+把数据按照目录的结构组织,检索数据快.读的速度快,写的速度慢.
+
+适合一次场景,一次写入,多次读取.
+
+Windows 支持 ldap 好.  WindowsAD(活动目录,就是ldap).
+
+**虚拟用户**
+
+用户不是存在的,可以访问系统的用户,仅用于访问某服务的标示.
+
+
+pop3服务器自身有mysql,ldap访问驱动.访问数据库完成账号密码的验证.
+
+但是smtpd没有驱动,必须使用sasl验证,但是sasl是假设用户是系统账户到`shadow`文件验证,为了到数据库验证,需要在额外添加一个组件(帮助sasl访问数据库)进行验证.
+
+**垃圾邮件分拣器**
+
+**病毒邮件过滤器**
+
 ### 整理知识点
 
 ---
